# tremor-mesh

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-MIT  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
1_Project_Description/: PROJECT.md
2_System_Architecture/: ARCHITECTURE.md
3_Hardware/3_1_BOM/: BOM.md
3_Hardware/3_2_Schematics/: README.md
3_Hardware/3_3_Enclosure/: README.md
4_Firmware/coordinator/: README.md
4_Firmware/node/: README.md  node.ino
5_Algorithms/: demo.py  test_stalta.py
6_Server/: gateway.py  test_consensus.py
7_Simulations/: network_sim.py
docs/: faq.md  index.md  licensing.md  roadmap.md
tools/: render_demo.py
tremormesh/: __init__.py  cli.py  consensus.py  stalta.py  synthetic.py
