[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tremormesh"
version = "0.1.0"
description = "Open-source distributed earthquake early-warning sensor mesh"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "The TREMORMESH Contributors" }]
keywords = ["earthquake", "early-warning", "seismology", "iot", "esp32", "sta-lta"]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
mqtt = ["paho-mqtt>=1.6"]
media = ["pillow>=9"]
dev = ["pytest>=7.0"]

[project.scripts]
tremormesh-demo = "tremormesh.cli:demo_main"
tremormesh-sim = "tremormesh.cli:sim_main"

[project.urls]
Homepage = "https://github.com/tylrcc/tremor-mesh"
Documentation = "https://github.com/tylrcc/tremor-mesh/tree/main/docs"

[tool.setuptools]
packages = ["tremormesh"]

[tool.pytest.ini_options]
testpaths = ["5_Algorithms", "6_Server"]
